reduce time taken for day 16 solution